# DutchDesignBot

./: .gitignore  README.md  pyproject.toml  settings.yaml
backend/: Dockerfile  answers.db  answers.sql  cloud_deploy.sh  main.py  main_local.py  pyproject.toml  settings.yaml  start_chat.sh
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: index.html
frontend/src/: App.css  App.js  BottomCarousel.css  LissajousFigure.css  index.css  index.js
frontend/src/components/: BoredEmoticons.css  BoredEmoticons.js  BottomCarousel.css  BottomCarousel.js  Chatbox.css  Chatbox.js  LissajousFigure.css  LissajousFigure.js  LissajouseFigure.js  SolutionSelection.js  TopCarousel.css  TopCarousel.js
scoreboard/: package-lock.json  package.json  pnpm-lock.yaml
scoreboard/public/: index.html  video.html
scoreboard/src/: App.css  App.js
